--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "hc-lite",
   "main": "",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "dependencies": {
     "pm2"                  : "*",
     "coffee-script"        : "*",
     "justlog"              : "*",
     "options-stream"       : "*",
-    "@ali/hc-cover-runner" : "*",
     "co"                   : "*",
     "thunkify"             : "*",
     "connect"              : "2.12.0",
@@ -26,5 +25,8 @@
   },
   "scripts": {
     "test": "make test"
+  },
+  "bin" : {
+    "hc-lite" : "./bin/hc-lite"
   }
 }
