complete firsr version

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node"   :  ">=6.9.1"
   },
   "scripts": {
-    "start" : "./bin/hc-lite",
+    "start" : "./bin/hc-lite dev",
     "test"  : "make test"
   },
   "bin" : {
