--- a/etc/config.default.yaml
+++ b/etc/config.default.yaml
@@ -1,13 +1,13 @@
 
-name: hc-lite
+name: barrage-king
 
 version: 1.0.0
 
 port: 8080
 
-process_num: auto
+process_num: 1
 
-wsExtension: './src/test-websocket'
+wsExtension: './src/barrage'
 
 extensions:
   '/ > ./src/test-http':
